--- a/templates/registration.html
+++ b/templates/registration.html
@@ -5,10 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+    <h1>Registration</h1>
     <form method="post">
-        <textarea name="text"></textarea>
+        <input type="email" name="email">
+        <input type="password" name="password">
         <input type="submit">
     </form>
-    <p>{{ result }}</p>
 </body>
 </html>
