--- a/templates/feedbacks/create.html
+++ b/templates/feedbacks/create.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+
 {% block content %}
     <div class="col-12 col-lg-6 offset-lg-3">
-        <h2>Login</h2>
+        <h2>New feedbacks</h2>
         <form method="post">
             {% csrf_token %}
             {% include 'parts/form.html' with form=form %}
