--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -1,32 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>Hello word!</h1>
-
-{% for product in products %}
-    <p>
-        {% if product.image %}<img src="{{ product.image.url }}" style="width: 80px;">{% endif %}
-        {{ product.name }} - {{ product.price }}
-    </p>
-{% endfor %}
-
-<div>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-{#        {% for field in form %}#}
-{#            <label for="{{ field.label }}">{{ field.name }}</label>#}
-{#            <input type="{{ field.widget_type }}" value="{{ field.initial }}" name="{{ field.name }}" />#}
-{#        {% endfor %}#}
-        {{ form.as_div }}
-        <input type="submit" value="Save">
-    </form>
-    {% for name, error in form.errors.items %}
-        <p>{{ name }} {{ error }}</p>
+{% extends 'base.html' %}
+{% block content %}
+    {% for product in products %}
+        <div class="col-12 {% if product.products.exists %}col-lg-6{% else %}col-lg-3{% endif %} mt-3 mt-lg-5">
+            <div class="card">
+                {% if product.image %}
+                    <figure class="text-center">
+                        <img src="{{ product.image.url }}"
+                             class="w-100 p-3"
+                             alt="{{ product.name }}">
+                    </figure>
+                {% endif %}
+                <div class="card-body">
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <p class="small">
+                        {% for category in product.categories.iterator %}
+                            <span class="text-success">{{ category.name }} </span>
+                        {% endfor %}
+                    </p>
+                    <p class="card-text">
+                        {{ product.description }}
+                    </p>
+                    <p class="card-text">
+                        {{ product.price }}
+                    </p>
+                    {% if product.products.exists %}
+                        <p>Including:</p>
+                        {% for sub in product.products.iterator %}
+                            <div class="d-inline-flex flex-column rounded border p-2 m-1">
+                                <p>{{ sub.name }}</p>
+                                <figure class="text-center d-inline">
+                                    <img src="{{ sub.image.url }}"
+                                         class="product-image p-3"
+                                         alt="{{ product.name }}">
+                                </figure>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                    <a href="#" class="btn btn-warning w-100">Add to cart</a>
+                </div>
+            </div>
+        </div>
     {% endfor %}
-</div>
-</body>
-</html>
+{% endblock content %}
