--- a/templates/parts/form.html
+++ b/templates/parts/form.html
@@ -1,6 +1,7 @@
 {% load widget_tweaks %}
-
+{% csrf_token %}
 {% for field in form %}
+    {{ field.field.field_type }}
     {% if field.is_hidden %}
         {{ field }}
     {% elif field|widget_type == 'textarea' %}
@@ -15,12 +16,12 @@
     {% else %}
         <div class="mb-3">
             <label for="{{ field.id_for_label }}"
-                   class="form-label">
+                   class="form-label mt-3">
                 {{ field.label }}
             </label>
-            <input type="{% if field|field_type == 'integerfield' %}number{% else %}text{% endif %}"
+            <input type="{{ field.field.widget.input_type }}"
                    class="form-control"
-                   id="{{ field.id_for_label }}"
+                   id="{{ field.auto_id }}"
                    name="{{ field.name }}"
                    {% if field.field.required %}required{% endif %}
                    aria-describedby="{{ field.name }}Help">
@@ -31,7 +32,22 @@
             {% endif %}
         </div>
     {% endif %}
-    {% for error in  field.errors %}
-        <p class="small text-danger">{{ error }}</p>
-    {% endfor %}
+    {% if field.errors %}
+        <div class="mb-2">
+            <ul>
+                {% for error in field.errors %}
+                    <li class="text-danger small">{{ error }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
 {% endfor %}
+{% if form.non_field_errors %}
+    <div class="mb-2">
+        <ul>
+            {% for error in form.non_field_errors %}
+                <li class="text-danger small">{{ error }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+{% endif %}
