--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="col-12 col-lg-6 offset-lg-3">
+    <div class="col-12 col-lg-4 offset-lg-4 my-3 my-lg-5">
         <h2>Login</h2>
         <form method="post">
-            {% csrf_token %}
             {% include 'parts/form.html' with form=form %}
-            <input type="submit" class="btn btn-primary" value="Submit">
+            <input type="submit" class="btn btn-primary w-100" value="Login">
         </form>
+        <div class="mt-3 text-center">
+            <a href="{% url 'registration' %}">Don`t have account yet? Signup.</a>
+        </div>
     </div>
 {% endblock content %}
