--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>Login</h1>
-    {{ form.errors }}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-    <input type="submit" value="Save">
-</form>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    <div class="col-12 col-lg-4 offset-lg-4 my-3 my-lg-5">
+        <h2>Registration</h2>
+        <form method="post">
+            {% include 'parts/form.html' with form=form %}
+            <input type="submit" class="btn btn-primary w-100" value="Signup">
+        </form>
+        <div class="mt-3 text-center">
+            <a href="{% url 'login' %}">Already have account? Login.</a>
+        </div>
+    </div>
+{% endblock content %}
