--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
     {% for product in products %}
         <div class="col-12 {% if product.products.exists %}col-lg-6{% else %}col-lg-3{% endif %} mt-3 mt-lg-5">
@@ -6,7 +7,13 @@
                 {% if product.image %}
                     <figure class="text-center">
                         <img src="{{ product.image.url }}"
-                             class="w-100 p-3"
+                             class="product-img p-3"
+                             alt="{{ product.name }}">
+                    </figure>
+                    {% else %}
+                    <figure class="text-center">
+                        <img src="{% static 'images/logo.png' %}"
+                             class="product-img p-3"
                              alt="{{ product.name }}">
                     </figure>
                 {% endif %}
@@ -26,11 +33,11 @@
                     {% if product.products.exists %}
                         <p>Including:</p>
                         {% for sub in product.products.iterator %}
-                            <div class="d-inline-flex flex-column rounded border p-2 m-1">
+                            <div class="d-inline-flex flex-column rounded border p-2 m-1 sub-product">
                                 <p>{{ sub.name }}</p>
                                 <figure class="text-center d-inline">
                                     <img src="{{ sub.image.url }}"
-                                         class="product-image p-3"
+                                         class="product-img p-3"
                                          alt="{{ product.name }}">
                                 </figure>
                             </div>
