--- a/templates/parts/header.html
+++ b/templates/parts/header.html
@@ -3,7 +3,8 @@
     <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'main' %}">
-                <img class="logo" src="{% static 'images/logo.png' %}" alt="logo">
+                <img class="logo" src="{% static 'images/logo.png' %}"
+                     alt="logo">
             </a>
             <button class="navbar-toggler" type="button"
                     data-bs-toggle="collapse"
@@ -13,7 +14,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
                     {% if request.user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page"
@@ -26,6 +27,17 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page"
                                href="{% url 'logout' %}">Logout</a>
+                        </li>
+                        <li class="ms-auto nav-item">
+                            <a class="nav-link active" aria-current="page"
+                               href="{% url 'cart' %}">
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                     width="16"
+                                     height="16" fill="currentColor"
+                                     class="bi bi-cart4" viewBox="0 0 16 16">
+                                    <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+                                </svg>
+                            </a>
                         </li>
                     {% else %}
                         <li class="nav-item">
