--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -18,7 +18,7 @@
                              class="product-img p-3"
                              alt="{{ product.name }}">
                     </figure>
-                    {% else %}
+                {% else %}
                     <figure class="text-center">
                         <img src="{% static 'images/logo.png' %}"
                              class="product-img p-3"
@@ -51,7 +51,13 @@
                             </div>
                         {% endfor %}
                     {% endif %}
-                    <a href="#" class="btn btn-warning w-100">Add to cart</a>
+                    <form method="post" action="{% url 'cart_action' 'add' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="product_id"
+                               value="{{ product.id }}">
+                        <input type="submit" value="Add to cart"
+                               class="btn btn-warning w-100">
+                    </form>
                 </div>
             </div>
         </div>
