--- a/templates/parts/header.html
+++ b/templates/parts/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <header>
     <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container-fluid">
@@ -18,15 +19,15 @@
                     {% if request.user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page"
-                               href="{% url 'products' %}">Products</a>
+                               href="{% url 'products' %}">{% translate 'Products' %}</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page"
-                               href="{% url 'feedbacks' %}">Feedbacks</a>
+                               href="{% url 'feedbacks' %}">{% translate 'Feedbacks' %}</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page"
-                               href="{% url 'logout' %}">Logout</a>
+                               href="{% url 'logout' %}">{% translate 'Logout' %}</a>
                         </li>
                         <li class="ms-auto nav-item">
                             <a class="nav-link active" aria-current="page"
@@ -38,6 +39,28 @@
                                     <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
                                 </svg>
                             </a>
+                        </li>
+                        <li>
+                            <form action="{% url 'set_language' %}"
+                                  method="post">
+                                {% csrf_token %}
+                                <input name="next" type="hidden"
+                                       value="{{ redirect_to }}">
+                                <select name="language">
+                                    {% get_current_language as LANGUAGE_CODE %}
+                                    {% get_available_languages as LANGUAGES %}
+                                    {% get_language_info_list for LANGUAGES as languages %}
+                                    {% for language in languages %}
+                                        <option value="{{ language.code }}"
+                                                {% if language.code == LANGUAGE_CODE %}
+                                                selected{% endif %}>
+                                            {{ language.name_local }}
+                                            ({{ language.code }})
+                                        </option>
+                                    {% endfor %}
+                                </select>
+                                <input type="submit" value="Go">
+                            </form>
                         </li>
                     {% else %}
                         <li class="nav-item">
