--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -12,6 +12,7 @@
     {% for product in products %}
         <div class="col-12 {% if product.products.exists %}col-lg-6{% else %}col-lg-3{% endif %} mt-3 mt-lg-5">
             <div class="card">
+            <a href="{% url 'product' product.id %}">
                 {% if product.image %}
                     <figure class="text-center">
                         <img src="{{ product.image.url }}"
@@ -25,6 +26,7 @@
                              alt="{{ product.name }}">
                     </figure>
                 {% endif %}
+            </a>
                 <div class="card-body">
                     <h5 class="card-title">{{ product.name }}</h5>
                     <p class="small">
