--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     <link href="{% static 'style.css' %}" rel="stylesheet">
 </head>
 <body class="{% block body_class %}{% endblock body_class %}">
+{% if messages %}
+    {% include 'parts/messages.html' %}
+{% endif %}
 {% block header %}
     {% include 'parts/header.html' %}
 {% endblock header %}
