--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
           rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
           crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="{% static 'style.css' %}" rel="stylesheet">
 </head>
 <body class="{% block body_class %}{% endblock body_class %}">
