--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -70,4 +70,7 @@
             </div>
         </div>
     {% endfor %}
+    {% if products %}
+        {% include 'parts/paginator.html' %}
+    {% endif %}
 {% endblock content %}
