--- a/templates/parts/header.html
+++ b/templates/parts/header.html
@@ -32,6 +32,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page"
+                               href="{% url 'favourites' %}">{% translate 'Favourites' %}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page"
                                href="{% url 'logout' %}">{% translate 'Logout' %}</a>
                         </li>
                         <li class="ms-auto nav-item">
