--- a/templates/orders/cart.html
+++ b/templates/orders/cart.html
@@ -44,10 +44,8 @@
                                 {{ item.sub_total }}
                             </td>
                             <td>
-                                <input type="hidden" name="order_item_id"
-                                       value="{{ item.id }}">
                                 <input type="submit" value="Remove"
-                                       formaction="{% url 'cart_action' 'remove' %}"
+                                       formaction="{% url 'cart_action' 'remove' %}?order_item_id={{ item.id }}"
                                        class="btn btn-danger w-100">
                             </td>
                         </tr>
